--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 liblnlists 1.0
 
-Written by Karsten König
+Written by Karsten-Kai König
 
 Description
 
@@ -32,7 +32,7 @@ Usage:
 Please look into DOCUMENTATION for the usage of each function and for examples.
 
 
-Copyright (C) 2010-2011 Karsten König <KKoenig@posteo.de>
+Copyright (C) 2010-2011 Karsten-Kai König <KKoenig@posteo.de>
 
 This program is free software; you can use it under the terms of the MIT-License.
 You should have received a copy of the MIT-License along with this program; if not check out http://www.opensource.org/licenses/mit-license.php
